// Copyright (c) 2020, Conf-Group. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

import "google/protobuf/any.proto";
package pojo;

message ServerRequest {
  string label = 1;
  google.protobuf.Any body = 2;
  string requestId = 3;
  map<string, string> header = 4;
}

message ServerResponse {
  string label = 1;
  string requestId = 2;
  RestResult result = 3;
  map<string, string> header = 4;
}

message RestResult {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any body = 3;
}
